<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".activities.LoginScreenActivity">


            <!-- Title -->
            <TextView
                android:id="@+id/tvSignIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                android:textSize="24sp"
                android:fontFamily="sans-serif-medium"
                android:layout_marginBottom="8dp" />

            <!-- Subtitle -->
            <TextView
                android:id="@+id/tvSubtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome_back"
                android:textSize="14sp"
                android:fontFamily="sans-serif"
                android:layout_marginBottom="24dp" />

            <!-- Email Field -->
            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="12dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/rounded_edittext_background"
                android:layout_marginBottom="16dp" />

            <!-- Password Field -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:inputType="textPassword"
                    android:padding="12dp"
                    android:background="@drawable/rounded_edittext_background" />

                <ImageView
                    android:id="@+id/ivTogglePassword"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="30dp"
                    android:backgroundTint="@color/lightpurple"
                    android:src="@drawable/ic_eye" />
            </RelativeLayout>

            <!-- Forgot Password -->
            <TextView
                android:id="@+id/tvForgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:textColor="@color/purple"
                android:layout_gravity="end"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="24dp" />

            <!-- Sign In Button -->
            <Button
                android:id="@+id/btnSignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/purple"
                android:text="@string/sign_in"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:textColor="@android:color/white"
                android:layout_marginBottom="16dp"
                android:padding="12dp" />

            <!-- Divider -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="16dp">

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1"
                    android:background="@color/grey" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/or_sign_in_with"
                    android:layout_marginHorizontal="8dp"
                    android:textColor="@color/grey" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1"
                    android:background="@color/grey" />
            </LinearLayout>

            <!-- Social Login Buttons -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginBottom="16dp">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:padding="12dp"
                    android:src="@drawable/apple_logo"
                    android:background="@drawable/circle_bg"
                    android:layout_marginHorizontal="8dp" />

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:padding="12dp"
                    android:background="@drawable/circle_bg"
                    android:src="@drawable/google"
                    android:layout_marginHorizontal="8dp" />

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:padding="12dp"
                    android:background="@drawable/circle_bg"
                    android:src="@drawable/facebook"
                    android:layout_marginHorizontal="8dp" />
            </LinearLayout>

            <!-- Sign Up -->
           <RelativeLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginEnd="26dp"
               >
               <TextView
                   android:id="@+id/textAccount"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_centerHorizontal="true"
                   android:text="@string/don_t_have_an_account"
                   android:textColor="@color/black"
                   android:layout_gravity="center" />
               <TextView
                   android:id="@+id/tvSignUp"
                   android:layout_toEndOf="@id/textAccount"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginStart="2dp"
                   android:textStyle="bold"
                   android:text="@string/sign_up"
                   android:textColor="@color/purple"
                   android:layout_gravity="center" />
               <View
                   android:layout_width="53dp"
                   android:layout_height="1dp"
                   android:layout_below="@id/tvSignUp"
                   android:layout_toEndOf="@id/textAccount"
                   android:background="@color/blue"/>
           </RelativeLayout>


</LinearLayout>